--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -13,14 +13,12 @@ jobs:
     name: "Unit Test"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 'lts/hydrogen'
+          node-version: 'lts/iron'
           registry-url: https://registry.npmjs.org/
-      - uses: actions/cache@v2
+      - uses: actions/cache@v4
         id: npm-cache
         with:
           path: '**/node_modules'
