--- a/.github/workflows/notify.yaml
+++ b/.github/workflows/notify.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ inputs.tag == 'latest'}}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Get latest tag
         uses: oprypin/find-latest-tag@v1
         with:
@@ -23,7 +23,7 @@ jobs:
       - name: Notify Slack of Release
         uses: tokorom/action-slack-incoming-webhook@main
         env:
-          INCOMING_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         with:
           text: "A new version of ${{ github.event.repository.full_name }}[${{ steps.repoTag.outputs.tag }}] has been released"
           attachments: |
