--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -24,12 +24,12 @@ jobs:
         run: |
           echo 'Only the tags "latest" or "next" are supported. You entered "${{ github.event.inputs.tag }}"'
           exit 1
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 'lts/hydrogen'
+          node-version: 'lts/iron'
           registry-url: https://registry.npmjs.org/
-      - uses: actions/cache@v2
+      - uses: actions/cache@v4
         id: npm-cache
         with:
           path: '**/node_modules'
@@ -37,8 +37,6 @@ jobs:
       - name: Install dependencies
         if: steps.npm-cache.outputs.cache-hit != 'true'
         run: npm ci
-      - name: Build
-        run: npm run build
       #- run: npm test
       - uses: JS-DevTools/npm-publish@v3
         with:
@@ -48,6 +46,6 @@ jobs:
 
   ci-notify:
     needs: publish-npm
-    uses: adobe/reactor-sandbox/.github/workflows/notify.yaml@master
+    uses: adobe/reactor-uploader/.github/workflows/notify.yaml@master
     with:
       tag: ${{github.event.inputs.tag}}
