--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -46,6 +46,6 @@ jobs:
 
   ci-notify:
     needs: publish-npm
-    uses: adobe/reactor-uploader/.github/workflows/notify.yaml@master
+    uses: adobe/reactor-sandbox/.github/workflows/notify.yaml@master
     with:
       tag: ${{github.event.inputs.tag}}
