--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -37,6 +37,8 @@ jobs:
       - name: Install dependencies
         if: steps.npm-cache.outputs.cache-hit != 'true'
         run: npm ci
+      - name: Build Production
+        run: npm run build
       #- run: npm test
       - uses: JS-DevTools/npm-publish@v3
         with:
