require tag in npm-publish, and log the passed tag in notify.yaml

--- a/.github/workflows/notify.yaml
+++ b/.github/workflows/notify.yaml
@@ -9,6 +9,11 @@ on:
         type: 'string'
 
 jobs:
+  log-tag:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log Tag
+        run: echo "Tag is ${{ inputs.tag }}"
   notify-on-success:
     runs-on: ubuntu-latest
     if: ${{ inputs.tag == 'latest'}}
