--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -45,9 +45,11 @@ jobs:
           token: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
           tag: ${{ github.event.inputs.tag || 'latest' }}
           access: 'public'
+      - name: Log Current Branch
+        run: echo "Current branch is "${{ github.ref_name }}
 
   ci-notify:
     needs: publish-npm
-    uses: adobe/reactor-sandbox/.github/workflows/notify.yaml@master
+    uses: adobe/reactor-sandbox/.github/workflows/notify.yaml@${{ github.ref_name }}
     with:
       tag: ${{github.event.inputs.tag}}
