--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -50,6 +50,6 @@ jobs:
 
   ci-notify:
     needs: publish-npm
-    uses: adobe/reactor-sandbox/.github/workflows/notify.yaml@${{ github.ref_name }}
+    uses: adobe/reactor-sandbox/.github/workflows/notify.yaml@master
     with:
       tag: ${{github.event.inputs.tag}}
