--- a/.github/workflows/notify.yaml
+++ b/.github/workflows/notify.yaml
@@ -26,7 +26,7 @@ jobs:
           releases-only: true  # We know that all relevant tags have a GitHub release for them.
         id: repoTag  # The step ID to refer to later.
       - name: Notify Slack of Release
-        uses: tokorom/action-slack-incoming-webhook@v1.3.0
+        uses: tokorom/action-slack-incoming-webhook@main
         env:
           INCOMING_WEBHOOK_URL: ${{ env.SLACK_WEBHOOK_URL }}
         with:
