--- a/.github/workflows/notify.yaml
+++ b/.github/workflows/notify.yaml
@@ -7,6 +7,9 @@ on:
       tag:
         required: true
         type: 'string'
+    secrets:
+      SLACK_WEBHOOK_URL:
+        required: true
 
 jobs:
   log-tag:
