--- a/package.json
+++ b/package.json
@@ -41,38 +41,38 @@
     ]
   },
   "dependencies": {
-    "@adobe/react-spectrum": "^3.37.1",
-    "@adobe/reactor-babel-plugin-replace-tokens-edge": "^1.1.0",
-    "@adobe/reactor-bridge": "^11.0.1",
-    "@adobe/reactor-extension-core-edge": "^1.1.3",
-    "@adobe/reactor-token-scripts-edge": "^1.1.3",
-    "@adobe/reactor-turbine": "^27.2.0",
-    "@adobe/reactor-turbine-edge": "^2.1.0",
-    "@adobe/reactor-validator": "^2.3.0",
-    "@babel/core": "^7.15.8",
-    "@babel/generator": "^7.15.8",
-    "@babel/parser": "^7.15.8",
-    "@babel/traverse": "^7.15.4",
+    "@adobe/react-spectrum": "^3.39.0",
+    "@adobe/reactor-babel-plugin-replace-tokens-edge": "^1.2.0",
+    "@adobe/reactor-bridge": "^12.0.0",
+    "@adobe/reactor-extension-core-edge": "^1.4.0",
+    "@adobe/reactor-token-scripts-edge": "^1.2.0",
+    "@adobe/reactor-turbine": "^28.0.0",
+    "@adobe/reactor-turbine-edge": "^3.0.1",
+    "@adobe/reactor-validator": "^2.4.0",
+    "@babel/core": "^7.26.7",
+    "@babel/generator": "^7.26.5",
+    "@babel/parser": "^7.26.7",
+    "@babel/traverse": "^7.26.7",
     "@codemirror/basic-setup": "^0.19.0",
     "@codemirror/gutter": "^0.19.2",
     "@codemirror/lang-json": "^0.19.1",
     "@codemirror/lint": "^0.19.2",
     "@ramda/indexby": "^0.26.1",
-    "@rematch/core": "^2.1.1",
-    "@spectrum-icons/illustrations": "^3.2.2",
-    "@spectrum-icons/workflow": "^3.2.1",
-    "ajv": "^8.12.0",
+    "@rematch/core": "^2.2.0",
+    "@spectrum-icons/illustrations": "^3.6.18",
+    "@spectrum-icons/workflow": "^4.2.17",
+    "ajv": "^8.17.1",
     "ajv-draft-04": "^1.0.0",
     "ajv-formats": "^2.1.1",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.3",
     "chalk": "^4.1.2",
-    "deep-equal": "^2.0.5",
-    "express": "^4.17.1",
+    "deep-equal": "^2.2.3",
+    "express": "^4.21.2",
     "fs-extra": "^10.0.0",
     "glob": "^7.2.0",
     "immer": "^9.0.6",
-    "js-beautify": "^1.14.0",
-    "jshint": "^2.13.4",
+    "js-beautify": "^1.15.1",
+    "jshint": "^2.13.6",
     "jsonlint-mod": "^1.7.6",
     "match-requires": "^2.0.1",
     "node-fetch": "^2.6.7",
@@ -84,13 +84,12 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-router-last-location": "^2.0.1",
-    "react-split": "^2.0.13",
+    "react-split": "^2.0.14",
     "semver-diff": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/eslint-parser": "^7.26.5",
+    "@babel/preset-react": "^7.26.3",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -109,5 +108,8 @@
   },
   "engines": {
     "node": ">=20.17.0"
+  },
+  "overrides": {
+    "strip-comments": "^2.0.1"
   }
 }
